decodificacao funcionando e tratando letras que nao sao cifradas (asecntuadas e caracteres especiais) que antes retornavam deslocamento nulo, agora ele passa para a proxima e valida isso
