# routes/keyRoute.js
@@ -11,6 +11,25 @@ router.post("/decrypt", (req, res) => {
     // #swagger.tags = ['Key']
     // #swagger.summary = 'Descriptografar'
     // #swagger.description = 'Este endpoint recebe um arquivo criptografado e uma string com a primeira palavra descriptografada do arquivo: -Se a string estiver vazia, o sistema deve tentar descriptografar o arquivo usando a chave atual. -A nova chave resultante deve ser registrada no banco de dados e substituir a chave anterior como a chave atual.'
+    /*  #swagger.requestBody = {
+    required: true,
+    content: {
+        "application/json": {
+            schema: {
+                type: "object",
+                properties: {
+                    mensagem: { type: "string" },
+                    chave: { type: "string" }
+                },
+                required: ["mensagem"]
+            },
+            example: {
+                mensagem: "",
+                chave: "",
+            }
+        }
+    }
+    }*/
     ctrl.descriptografar(req, res);
 }); 
 
